--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ body {
 
 .downArrow:hover {
   color: white;
-  cursor: 'pointer';
+  cursor: pointer;
 }
 
 /** Header **/
@@ -171,24 +171,16 @@ body {
   font-size: 18px;
 }
 
+/*** Contact ***/
 
-/************************************************************/
-
-.task {
-  background: #f4f4f4;
-  margin: 5px;
-  padding: 10px 20px;
-  cursor: pointer;
-}
-
-.task.reminder {
-  border-left: 5px solid green;
-}
-
-.task h3 {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.contact {
+  margin: 30px auto;
+  max-width: 40%;
+  text-align: left;
+  min-width: 40%;
+  min-height: 80%;
+  color: white;
+  font-family: 'Courier New', monospace;
 }
 
 .add-form {
@@ -226,7 +218,26 @@ body {
   height: 20px;
 }
 
+/***************************************/
+
 footer {
   margin-top: 30px;
   text-align: center;
+}
+
+.task {
+  background: #f4f4f4;
+  margin: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.task.reminder {
+  border-left: 5px solid green;
+}
+
+.task h3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
