--- a/src/index.css
+++ b/src/index.css
@@ -181,8 +181,9 @@ body {
   padding: 30px;
   border-radius: 5px;
 
-  min-width: 100%;
-  min-height: 100%;
+  min-width: 30%;
+  min-height: 500px;
+  max-width: 60%;
 
   font-family: 'Courier New', monospace;
   font-size: 22px;
@@ -190,8 +191,37 @@ body {
   color: white;
 }
 
+.exp-btn {
+  width: auto;
+  display: inline-block;
+  transition: color 0.3s linear;
+  background: none;
+  color: #dab4d2;
+  /* border: 1px solid #dab4d2; */
+  border: none;
+  padding: 10px 20px;
+  margin: 0px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 18px;
+  font-family: inherit;
+}
+
+.exp-btn:hover {
+  color: #ffe4f9;
+}
+
+.exp-btn:focus {
+  outline: none;
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
+}
+
 .exp-block {
-  margin: 2% 15%;
+  /* margin: 2% 15%; */
   justify-content: center;
   display: flex;
 }
