--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,9 @@
   padding: 0;
 }
 
-/** Edi this for the header **/
+/** Edit this for the header **/
 a:link, a:visited, a.active {
+  font-family: 'Tahoma', sans-serif;
   color: #A8B7BC;
   transition: color 0.3s linear;
   text-decoration: none;
@@ -19,7 +20,7 @@ a:hover {
 }
 
 body {
-  font-family: 'Helvetica', sans-serif;
+  font-family: 'Tahoma', sans-serif;
   background: #161524;
 }
 
@@ -33,12 +34,6 @@ body {
   border-radius: 5px;
   font-size: 30px;
   color: white;
-}
-
-/** Breaking out of flex **/
-.break {
-  flex-basis: 100%;
-  height: 0;
 }
 
 /** Arrow **/
@@ -58,6 +53,13 @@ body {
 .downArrow:hover {
   color: white;
   cursor: pointer;
+}
+
+/* Scrollbar */
+.scrollbar {
+  height: 100%;
+  width: 2px;
+  background-color: white;
 }
 
 /** Header **/
@@ -170,20 +172,26 @@ body {
 .abt-text {
   color: white;
   font-size: 18px;
+
 }
 
 /*** Experience ***/
 
 .exp {
-  margin: 30px auto;
-  overflow: auto;
+  margin: 25% 25%;
+  justify-content: left;
+  display: flex;
+  min-width: 50%;
+  min-height: 100%;
+  max-width: 50%;
   border: 1px solid steelblue;
+}
+
+.exp-block {
   padding: 30px;
-  border-radius: 5px;
 
   min-width: 30%;
-  min-height: 500px;
-  max-width: 60%;
+  min-height: 30%;
 
   font-family: 'Courier New', monospace;
   font-size: 22px;
@@ -192,15 +200,17 @@ body {
 }
 
 .exp-btn {
-  width: auto;
-  display: inline-block;
-  transition: color 0.3s linear;
+  width: 100%;
   background: none;
+  transition: 0.3s;
+  text-align: left;
   color: #dab4d2;
+
   /* border: 1px solid #dab4d2; */
+
   border: none;
   padding: 10px 20px;
-  margin: 0px;
+  margin: 0px 0px;
   cursor: pointer;
   text-decoration: none;
   font-size: 18px;
@@ -209,32 +219,26 @@ body {
 
 .exp-btn:hover {
   color: #ffe4f9;
+  background-color: #2f2e3c;
+  opacity: 1;
 }
 
-.exp-btn:focus {
-  outline: none;
-}
-
-.btn-block {
-  display: block;
+.exp-btn-block {
   width: 100%;
-}
-
-.exp-block {
-  /* margin: 2% 15%; */
-  justify-content: center;
+  justify-content: flex-start;
   display: flex;
+  margin: 0;
 }
 
-.exp-skills {
-  transition: color 0.3s linear;
-  color: white;
-  margin: 5% 5%;
+.exp-scrollbar {
+  background-color: white;
+  opacity: 1;
+  padding: 1px;
+  transition: 0.3s;
 }
 
-.exp-skills:hover {
-  color: #dab4d2;
-  cursor:pointer;
+.exp-scrollbar-hover {
+  opacity: 1;
 }
 
 
