--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,10 @@ body {
   background: #161524;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .container {
   max-width: 60%;
   margin: 30px auto;
@@ -47,18 +51,14 @@ body {
   animation: bounce 0.9s infinite;
 }
 
-@keyframes bounce {
-  10% {
-    bottom: 2.5%;
-  }
-  50% {
-    bottom: 3.5%;
-  }
-}
-
 .downArrow:hover {
   color: white;
   cursor: pointer;
+}
+
+@keyframes bounce {
+  10% { bottom: 2.5%; }
+  50% { bottom: 3.5%; }
 }
 
 /* Scrollbar */
@@ -66,6 +66,28 @@ body {
   height: 100%;
   width: 2px;
   background-color: white;
+}
+
+.titles {
+  color: #dab4d2;
+  font-size: 25px;
+  font-family: 'Courier New', monospace;
+  position: relative;
+  overflow: hidden;
+  padding-left: 25%;
+}
+
+.titles:after {
+  margin-top: 25%;
+  display: inline-block;
+  content: "";
+  height: 1px;
+  background: #4c474c;
+  position: absolute;
+  width: 15%;
+  top: 50%;
+  margin-top: -2px;
+  margin-left: 10px;
 }
 
 /** Header **/
@@ -184,13 +206,15 @@ body {
 /*** Experience ***/
 
 .exp {
-  margin: 25% 25%;
+  margin-left: 25%;
+  margin-right: 25%;
+  margin-top: 3.5%;
+  margin-bottom: 3.5%;
   justify-content: left;
   display: flex;
-  min-width: 50%;
   min-height: 100%;
   max-width: 50%;
-  border: 1px solid steelblue;
+  /*border: 1px solid #dab3d2;*/
 }
 
 .exp-block {
@@ -199,9 +223,19 @@ body {
   min-height: 30%;
 
   font-family: 'Courier New', monospace;
-  font-size: 22px;
+  font-size: 18px;
   text-align: left;
   color: white;
+}
+
+.exp-skill {
+  color: #dab4d2;
+  margin: 5px;
+}
+
+.exp-skill-arrow {
+  color: #ef5ae7;
+  padding-top: 6px;
 }
 
 .exp-btn {
@@ -230,8 +264,6 @@ body {
   text-align: left;
   outline: none;
 
-  /* border: 1px solid #dab4d2; */
-
   border: none;
   padding: 10px 20px;
   margin: 0px 0px;
@@ -240,9 +272,8 @@ body {
   font-size: 18px;
   font-family: inherit;
 
-
   color: #ef5ae7;
-  background-color: #1b1a29;
+  background-color: #1f1e30;
   opacity: 1;
 }
 
@@ -267,22 +298,42 @@ body {
   background-color: #dab3d2;
   opacity: 0;
   padding: 1px;
-  transition: 0.3s;
+}
+
+.exp-scrollbar-open {
+  background-color: #dab3d2;
+  padding: 1px;
 }
 
 .exp-scrollbar-highlight {
-  background-color: #dab3d2;
+  background-color: none;
   opacity: 1;
   padding: 1px;
-  transition: 0.3s;
 }
 
-.exp-scrollbar-hover {
-  opacity: 1;
+/********* Work *********/
+.work {
+  min-width: 100%;
+  height: auto;
+  padding-top: 3.5%;
+  padding-bottom: 7%;
+  padding-left: 20%;
+  padding-right: 10%;
+  align-items: left;
+}
+
+#project {
+  cursor: pointer;
+}
+
+.project {
+  width: 100%;
+  padding: 10px;
+  height: auto;
 }
 
 
-/*** Contact ***/
+/********* Contact *********/
 
 .contact {
   margin: 30px auto;
@@ -293,6 +344,27 @@ body {
   color: white;
   font-family: 'Courier New', monospace;
 }
+
+#textInput{
+  resize: none;
+  width: 100%;
+  height: auto;
+
+  padding: 10px;
+  font-size: 18px;
+  font-family: 'Courier New', monospace;
+}
+
+#textInput-adjustable{
+  resize: vertical;
+  width: 100%;
+  height: 25px;
+
+  padding: 10px;
+  font-size: 18px;
+  font-family: 'Courier New', monospace;
+}
+
 
 .add-form {
   margin-bottom: 40px;
