Added email overlay
Added an overlay with my email on the right side

--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,35 @@ html {
   cursor: pointer;
 }
 
+.email-overlay {
+  display: block;
+  /* Keyword values */
+  right: 10%;
+  top: 50%;
+  max-width: auto;
+  transform: rotate(90deg);
+  position: fixed;
+
+  color: #857883;
+  bottom: 0;
+  font-family: 'Courier New', monospace;
+  font-size: 17px;
+}
+
+.email-overlay::after {
+    margin-top: 25%;
+    display: inline-block;
+    content: "";
+    height: 1px;
+    background: #4c474c;
+    width: 200%;
+    top: 50%;
+    margin-top: 0px;
+    margin-bottom: 100px;
+}
+
+
+
 @keyframes bounce {
   10% { bottom: 2.5%; }
   50% { bottom: 3.5%; }
@@ -83,10 +112,10 @@ html {
   content: "";
   height: 1px;
   background: #4c474c;
-  position: absolute;
   width: 15%;
   top: 50%;
-  margin-top: -2px;
+  margin-top: 0px;
+  margin-bottom: 5px;
   margin-left: 10px;
 }
 
@@ -206,7 +235,7 @@ html {
 /*** Experience ***/
 
 .exp {
-  margin-left: 25%;
+  margin-left: 30%;
   margin-right: 25%;
   margin-top: 3.5%;
   margin-bottom: 3.5%;
