--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,15 @@ html {
   scroll-behavior: smooth;
 }
 
+div#link_home {
+    transform: scale(1.5);
+    position: absolute;
+    max-height: 50px;
+    margin-left: 2%;
+    margin-top: 15px;
+    z-index:1;
+}
+
 .container {
   max-width: 60%;
   margin: 30px auto;
